Fix for bug #37787 (Memleak when using timeout in a class)